--- a/destacados/index.html
+++ b/destacados/index.html
@@ -101,15 +101,15 @@
         <li class="media">
           <img src="../img/dest/modmovsal.JPG" class="align-self-center mr-3" width="250" alt="...">
           <div class="media-body">
-            <h5 class="mt-0 mb-1">Modulo movil de salud</h5>
-            Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+            <h5 class="mt-0 mb-1">Módulo móvil de salud</h5>
+            Nuestro <b>módulo móvil de salud</b> aporta soluciones temporales o permanentes a hospitales, centros de salud y centros de atención complementarios, ofreciendo edificaciones transportables, especializadas, de rápida construcción, asépticas y resistentes al uso de productos altamente agresivos sin deteriorar su acabado. <b>módulo móvil de salud</b> proporciona respuestas rápidas y eficaces para resolver cualquier déficit de servicio de salud en el lugar deseado con estándares muy altos de <b>confort y limpieza.</b>
           </div>
         </li>
         <li class="media my-4">
           <div class="media">
             <div class="media-body">
-              <h5 class="mt-0 mb-1">Casa de interés social</h5>
-              Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+              <h5 class="mt-0 mb-1">Casa base</h5>
+              Queremos presentar a nuestros Clientes nuestra <b>casa básica</b> para vivienda rural o urbana, cuya versatilidad permite que sea implementada en proyectos individuales o urbanizados. Nos hemos preocupado por enlazar el diseño, la economía y el confort para generar áreas amplias que aseguren las necesidades de habitabilidad en un ambiente basado en la sencillez.  
             </div>
             <img src="../img/dest/casintsoc.jpg" width="250" class="align-self-center mr-3" alt="...">
           </div>
@@ -117,40 +117,42 @@
         <li class="media">
           <img src="../img/dest/camobr.JPG" class="align-self-center mr-3" width="250" alt="...">
           <div class="media-body">
-            <h5 class="mt-0 mb-1">Campamentos de obra</h5>
-            Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+            <h5 class="mt-0 mb-1">Campamentos</h5>
+            Su aplicación en proyectos de minería, petróleos y construcción contribuye a una excelente solución para las edificaciones provisionales que servirán de oficinas, almacenes, alojamientos, entre otros. Su sistema modular se adapta fácilmente a cualquier diseño y sus características termo-acústicas proveen ambientes de mayor confort, lo que se traduce en mayor productividad. Gracias a los materiales de excelente calidad utilizados en la fabricación de nuestro <b>campamento</b>, este puede ser reutilizado un sin número de veces.
           </div>
         </li>
         <li class="media my-4">
           <div class="media">
             <div class="media-body">
-              <h5 class="mt-0 mb-1">Caseta de vigilante</h5>
-              Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+              <h5 class="mt-0 mb-1">Caseta de vigilancia</h5>
+              Pensando en el mejoramiento de las condiciones del personal de seguridad y vigilancia, hemos desarrollado nuestra <b>caseta de vigilancia</b> conservando las formas tradicionales de cubo y ofreciendo los más altos estándares de confort y comodidad que permiten conservar el estado de alerta a la persona que la habita, adicionalmente proporciona gran visibilidad a su alrededor. Nuestra <b>caseta de vigilancia</b> es resistente a los cambios climáticos, fáciles de instalar, transportables y brindan una excelente presentación arquitectónica.       
             </div>
             <img src="../img/dest/casvig.JPG" width="200" class="align-self-center mr-3" alt="...">
           </div>
           <li class="media">
             <img src="../img/dest/cer.jpg" class="align-self-center mr-3" width="200" alt="...">
             <div class="media-body">
-              <h5 class="mt-0 mb-1">Cerramientos de áreas </h5>
-              Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+              <h5 class="mt-0 mb-1">Cerramientos exterior</h5>
+              Nos hemos preocupado por desarrollar un <b>cerramiento exterior</b> con características arquitectónicas diferenciadoras que permiten su vinculación armónica en cualquier lugar de instalación, proporcionando un aspecto agradable gracias a su diseño innovador y diferente. Facilita la seguridad, y privacidad. También es altamente resistente a los agentes climáticos.      
             </div>
           </li>
           <li class="media my-4">
             <div class="media">
               <div class="media-body">
-                <h5 class="mt-0 mb-1">Contenedores de oficinas o bodegas</h5>
-                Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+                <h5 class="mt-0 mb-1">Bodegas</h5>
+                Gracias a las características mecánicas y físicas del sistema constructivo RBS podemos crear espacios de grandes luces y de alturas considerables en la construcción de <b>bodegas</b> de almacenamiento, procesos industriales actividad logística e incluso eventos culturales de gran escala. 
+                La versatilidad y facilidad de montaje nos permite construir <b>bodegas</b> o naves industriales en la mitad del tiempo que sistemas tradicionales. Además, sus bajos costos de mantenimiento hacen que este tipo de edificaciones sean altamente rentables.
+
               </div>
               <img src="../img/dest/bod1.JPG" width="250" class="align-self-center mr-3" alt="...">
             </div>
-        </li>
-        <li class="media">
-          <img src="../img/dest/aul.jpg" class="align-self-center mr-3" width="250" alt="...">
-          <div class="media-body">
-            <h5 class="mt-0 mb-1">Aulas de clase</h5>
-            Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
-          </div>
+            </li>
+            <li class="media">
+              <img src="../img/dest/aul.jpg" class="align-self-center mr-3" width="250" alt="...">
+              <div class="media-body">
+                <h5 class="mt-0 mb-1">Aulas de clase</h5>
+                Llegamos con soluciones constructivas para los proyectos educativos en zonas urbanas, rurales y sobre todo en aquellos lugares de difícil acceso. Nuestras <b>aulas de clase</b> se adaptan a cualquier diseño en cualquier tipo de terreno. Proporcionan un acabado integral listo para usar. En la fabricación y construcción de las aulas damos cumplimiento a las normas vigentes para este tipo de edificaciones como lo son su capacidad sismo resistente, niveles de confort, iluminación, entre otros. También resaltamos su capacidad ignifuga y auto extinguible, aséptico y resistente al alto tráfico escolar.
+              </div>
       </ul>
       </div>
     </div>
