--- a/index.html
+++ b/index.html
@@ -58,11 +58,9 @@
             <!-- ---------------------------------------------- -->
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">soluciones</a>
-              <div class="dropdown-menu">
-                <a class="dropdown-item" href="soluciones/construcciones-pvc/index.html">Construcciones en PVC</a>
-                <a class="dropdown-item" href="soluciones/disenos-estructurales/index.html">Diseño Estructurales</a>
-                <a class="dropdown-item" href="soluciones/consultoria/index.html">Consultoria</a>               
+              <div class="dropdown-menu">          
                 <a class="dropdown-item" href="soluciones/estructura-metalicas/index.html">Estructuras Metálicas</a>
+                <a class="dropdown-item" href="soluciones/disenos-estructurales/index.html">Diseño y Consultoria</a>  
                 <a class="dropdown-item" href="soluciones/cubierta-cerramiento/index.html">Cubiertas y Cerramientos</a>
               </div>
             </li>
