--- a/soluciones/cubierta-cerramiento/index.html
+++ b/soluciones/cubierta-cerramiento/index.html
@@ -59,11 +59,9 @@
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">soluciones</a>
               <div class="dropdown-menu">
-                <a class="dropdown-item" href="../construcciones-pvc/index.html">Construcciones en PVC</a>
-                <a class="dropdown-item" href="../disenos-estructurales/index.html">Diseño Estructurales</a>
-                <a class="dropdown-item" href="../consultoria/index.html">Consultoria</a>               
-                <a class="dropdown-item" href="../estructura-metalicas/index.html">Estructuras Metálicas</a>
-                <a class="dropdown-item" href="../cubierta-cerramiento/index.html">Cubiertas y Cerramientos</a>
+                <a class="dropdown-item" href="../../soluciones/estructura-metalicas/index.html">Estructuras Metálicas</a>
+                <a class="dropdown-item" href="../../soluciones/disenos-estructurales/index.html">Diseño y Consultoria</a>  
+                <a class="dropdown-item" href="../../soluciones/cubierta-cerramiento/index.html">Cubiertas y Cerramientos</a>
               </div>
             </li>
 
@@ -86,7 +84,7 @@
   </nav>
 
   <!-- Page Header -->
-  <header class="masthead" style="background-image: url('../../img/sec/sector-alimentos-bodegas.jpg')">
+  <header class="masthead" style="background-image: url('../../img/sol/cubiertas-3.jpg')">
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
