--- a/soluciones/estructura-metalicas/index.html
+++ b/soluciones/estructura-metalicas/index.html
@@ -59,11 +59,9 @@
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">soluciones</a>
               <div class="dropdown-menu">
-                <a class="dropdown-item" href="../construcciones-pvc/index.html">Construcciones en PVC</a>
-                <a class="dropdown-item" href="../disenos-estructurales/index.html">Diseño Estructurales</a>
-                <a class="dropdown-item" href="../consultoria/index.html">Consultoria</a>               
-                <a class="dropdown-item" href="../estructura-metalicas/index.html">Estructuras Metálicas</a>
-                <a class="dropdown-item" href="../cubierta-cerramiento/index.html">Cubiertas y Cerramientos</a>
+                <a class="dropdown-item" href="../../soluciones/estructura-metalicas/index.html">Estructuras Metálicas</a>
+                <a class="dropdown-item" href="../../soluciones/disenos-estructurales/index.html">Diseño y Consultoria</a>  
+                <a class="dropdown-item" href="../../soluciones/cubierta-cerramiento/index.html">Cubiertas y Cerramientos</a>
               </div>
             </li>
 
@@ -86,7 +84,7 @@
   </nav>
 
   <!-- Page Header -->
-  <header class="masthead" style="background-image: url('../../img/sec/sector-alimentos-bodegas.jpg')">
+  <header class="masthead" style="background-image: url('../../img/sol/estructuras-metalicas-1.JPG')">
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
@@ -103,26 +101,34 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
-        <h2 style="text-align: center;">INSTALACIONES DE ALTA CALIDAD PARA
-          LA INDUSTRIA DE ALIMENTOS Y BEBIDAS
+        <h2 style="text-align: center;">“ UN PASO ADELANTE CON INFRAESTRUCTURA 
+          QUE ESTIMULA LA PRODUCTIVIDAD Y MODERNIZA ESPACIOS…“
           </h2>
-          <p>Este sector exige facilidad de asepsia, facilidad de limpieza, durabilidad, clima controlado, amplios espacios y diseños con propósito. Las construcciones con paneles en PVC y nuestros diseños cumplen estos requerimientos
-            la combinación de los paneles de PVC, nuestra experiencia en el diseño y conocimientos de normativa ayuda a que su empresa sea rentable y cumpla con las exigencias de organismos de control
-            El diseño único de los paneles de PVC, permite acoplar una serie de paneles y accesorios en materiales termoplásticos de última generación, para crear muros y cubiertas, en menor tiempo que un sistema tradicional. Dependiendo del proyecto puede utilizarse con espesor de muros de 100 mm o 64 mm
-            Entre muchos beneficios para este sector tenemos:
-          <ul>  
-            <li> Superficies asépticas.</li>                                 
-            <li>  Resistente a químicos de limpieza.</li>
-            <li>  Superficie Resistente al Moho.</li>
-            <li>  Excelentes propiedades térmicas y reflectividad lumínica.</li>
-            <li>  Excelente acabado.</li>
-            <li>  Aislante acústico.</li>
-            <li>  Bajo costo de mantenimiento.</li>
-            <li>  Ignífugo y autoextinguidle.</li>
-            <li>  Norma Sismo-resistente.</li>
-            <li>  Código Sanitario.</li>
-          </ul>
-            </p>
+          <p>
+            A la vanguardia de las nuevas tendencias de construcciones modernas, Amviestruc genera soluciones constructivas, 
+            encontrando formas innovadoras y creativas para entregar a nuestros clientes edificios destacados desarrollados 
+            en tiempos reducidos, con los mejores costos del mercado y sin limitantes en la ubicación del proyecto.
+          </p>
+          <p>
+            Contamos con el respaldo de personas expertas en cada una de los procesos, ofreciendo un enfoque en el 
+            cumplimiento de las expectativas de nuestros clientes fundamentados en la honestidad, confiabilidad y responsabilidad.
+          </p>
+          <h2 style="text-align: center;">CAPACIDADES</h2>
+          <P>
+            Diseño y Construcción: Gracias al equipo interdisciplinario al interior de Amviestruc,
+            logramos agrupar el diseño y la construcción como un solo servicio, facilitando la búsqueda
+             a nuestros Clientes de soluciones completas.    
+          </P>
+          <P>
+            Fabricación en Taller y/o Construcción en sitio: Apoyados en nuestros mas de 3000m2 de área 
+            de producción podemos realizar una prefabricación de los proyectos de nuestros Clientes con 
+            su posterior ensamble y armado en sitio. 
+          </P>
+          <P>
+            Edificaciones especiales: Nuestra amplia experiencia en el sector, nos ha permitido desarrollar grandes habilidades 
+            para la solución de infraestructura no convencional construida en estructura metálica, como muelles, estaciones de bombeo, 
+            estructuras complementarias sobre embarcaciones, cárcamos, entre otros…    
+          </P>
       </div>
     </div>
   </div>
