--- a/soluciones/estructura-metalicas/index.html
+++ b/soluciones/estructura-metalicas/index.html
@@ -113,6 +113,12 @@
             Contamos con el respaldo de personas expertas en cada una de los procesos, ofreciendo un enfoque en el 
             cumplimiento de las expectativas de nuestros clientes fundamentados en la honestidad, confiabilidad y responsabilidad.
           </p>
+            <div>
+              <img src="../../img/sol/estructuras-metalicas-5.jpg"
+              
+              class="responsivo1" 
+              alt="Estructuras metálicas una rapida solución">
+            </div>
           <h2 style="text-align: center;">CAPACIDADES</h2>
           <P>
             Diseño y Construcción: Gracias al equipo interdisciplinario al interior de Amviestruc,
