--- a/soluciones/cubierta-cerramiento/index.html
+++ b/soluciones/cubierta-cerramiento/index.html
@@ -101,26 +101,31 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
-        <h2 style="text-align: center;">INSTALACIONES DE ALTA CALIDAD PARA
-          LA INDUSTRIA DE ALIMENTOS Y BEBIDAS
+        <h2 style="text-align: center;">“ALGUNOS ASPECTOS RELEVANTES COBRAN IMPORTANCIA EN LA ACTUALIDAD, EL APROBECHAMIENTO DE CIRCUSTANCIAS NATURALES, 
+          EFICIENCIA ENERGETICA Y ACUSTICA ADICIONALES A LA PROTECCIÓN CONTRA LA LLUVIA Y EL SOL O LA ESTETICA   …. “
           </h2>
-          <p>Este sector exige facilidad de asepsia, facilidad de limpieza, durabilidad, clima controlado, amplios espacios y diseños con propósito. Las construcciones con paneles en PVC y nuestros diseños cumplen estos requerimientos
-            la combinación de los paneles de PVC, nuestra experiencia en el diseño y conocimientos de normativa ayuda a que su empresa sea rentable y cumpla con las exigencias de organismos de control
-            El diseño único de los paneles de PVC, permite acoplar una serie de paneles y accesorios en materiales termoplásticos de última generación, para crear muros y cubiertas, en menor tiempo que un sistema tradicional. Dependiendo del proyecto puede utilizarse con espesor de muros de 100 mm o 64 mm
-            Entre muchos beneficios para este sector tenemos:
-          <ul>  
-            <li> Superficies asépticas.</li>                                 
-            <li>  Resistente a químicos de limpieza.</li>
-            <li>  Superficie Resistente al Moho.</li>
-            <li>  Excelentes propiedades térmicas y reflectividad lumínica.</li>
-            <li>  Excelente acabado.</li>
-            <li>  Aislante acústico.</li>
-            <li>  Bajo costo de mantenimiento.</li>
-            <li>  Ignífugo y autoextinguidle.</li>
-            <li>  Norma Sismo-resistente.</li>
-            <li>  Código Sanitario.</li>
-          </ul>
-            </p>
+          <p>
+            Contamos con una amplia gama de cubiertas y cerramientos de diferentes materiales, que proporcionan una variedad de soluciones 
+            constructivas a nuestros Clientes para sus obras nuevas o rehabilitaciones, altamente durables y resistentes a los más exigentes 
+            agentes climáticos.  Optimizamos eficiencia energética y acústica implementando sistemas de aislamiento térmico y acústico de alta calidad.    
+          </p>
+          <p>
+            <h2 style="text-align: center;">CAPACIDADES</h2> 
+          </p>
+          <p>
+            <h3><strong>Cubiertas y cerramientos con Aislamiento:</strong></h3> Proporcionamos sistemas de cubiertas y cerramientos con inyección en línea continua con poliuretano 
+            expansivo de alta densidad con cara externa e interna en PVC o metálica.
+          </p>
+          <div>
+            <img src="../../img/sol//cubiertas-4.jpg"
+            
+            class="responsivo1" 
+            alt="Estructuras metálicas una rapida solución">
+          </div>
+          <p>
+            <h3><strong>Cubiertas sin traslapos transversales:</strong></h3> Para los proyectos con cubiertas de luces extensas y cerramientos de gran altura, nuestros Clientes podrán 
+            contar con una solución eficiente y económica, implementando nuestros sistemas de cubiertas y cerramientos en PVC o metálicas sin traslapo.
+          </p>
       </div>
     </div>
   </div>
