--- a/soluciones/disenos-estructurales/index.html
+++ b/soluciones/disenos-estructurales/index.html
@@ -101,26 +101,49 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
-        <h2 style="text-align: center;">INSTALACIONES DE ALTA CALIDAD PARA
-          LA INDUSTRIA DE ALIMENTOS Y BEBIDAS
+        <h2 style="text-align: center;">“UN DISEÑO ES IMPRESINDIBLE PARA 
+          TRAZAR UN CAMINO, UN CRONOGRAMA CONFIABLE Y LOGRAR ECONOMIA PRESUPUESTAL …. “
           </h2>
-          <p>Este sector exige facilidad de asepsia, facilidad de limpieza, durabilidad, clima controlado, amplios espacios y diseños con propósito. Las construcciones con paneles en PVC y nuestros diseños cumplen estos requerimientos
-            la combinación de los paneles de PVC, nuestra experiencia en el diseño y conocimientos de normativa ayuda a que su empresa sea rentable y cumpla con las exigencias de organismos de control
-            El diseño único de los paneles de PVC, permite acoplar una serie de paneles y accesorios en materiales termoplásticos de última generación, para crear muros y cubiertas, en menor tiempo que un sistema tradicional. Dependiendo del proyecto puede utilizarse con espesor de muros de 100 mm o 64 mm
-            Entre muchos beneficios para este sector tenemos:
-          <ul>  
-            <li> Superficies asépticas.</li>                                 
-            <li>  Resistente a químicos de limpieza.</li>
-            <li>  Superficie Resistente al Moho.</li>
-            <li>  Excelentes propiedades térmicas y reflectividad lumínica.</li>
-            <li>  Excelente acabado.</li>
-            <li>  Aislante acústico.</li>
-            <li>  Bajo costo de mantenimiento.</li>
-            <li>  Ignífugo y autoextinguidle.</li>
-            <li>  Norma Sismo-resistente.</li>
-            <li>  Código Sanitario.</li>
-          </ul>
-            </p>
+          <p>
+            Ayudamos a nuestros clientes a definir el producto final antes de iniciar con las tareas de campo. 
+            <br>
+            Con un sin número de herramientas y un enorme bagaje de técnicas damos una visión completa del 
+            producto terminado a nuestros Clientes, Inversores, Constructores, Trabajadores, Contratistas y 
+            a todos los participantes, con el fin de optimizar todos los recursos logrando grandes resultados 
+            en la materialización del proyecto.
+          </p>
+          <p>
+            <h2 style="text-align: center;">CAPACIDADES</h2> 
+          </p>
+          <p>
+            Arquitectura Contamos con profesionales altamente capacitados para el desarrollo de proyectos 
+            arquitectónicos implementando procesos creativos encausados a satisfacer las necesidades de nuestros 
+            clientes, creando espacios funcionales, estéticos y tecnológicos. 
+          </p>
+          <p>
+            <h3><strong>Ingeniería:</strong></h3> Elaboramos estudios y diseños de Ingeniería conceptual y detallada para las diferentes
+            ramas de la Ingeniería Civil y para las diferentes etapas de los proyectos, desde el levantamiento 
+            topográfico y estudio geotécnico, pasando por el diseño estructural hasta llegar a los diferentes sistemas de redes. 
+          </p>
+          <div>
+            <img src="../../img/sol/disenos-5.png"
+            
+            class="responsivo1" 
+            alt="Estructuras metálicas una rapida solución">
+          </div>
+          <br>
+          <div>
+            <img src="../../img/sol/disenos-6.png"
+            
+            class="responsivo1" 
+            alt="Estructuras metálicas una rapida solución">
+          </div>
+          <p>
+            <h3><strong>Costos y Presupuestos:</strong></h3>  Le permitimos a nuestros Clientes conocer las cantidades de obra y el presupuesto detallado 
+            del proyecto a desarrollar con el fin de poder prever los flujos de inversión que ayudarán a tomar las mejores decisiones 
+            para la ejecución de la obra conociendo el resultado del ejercicio anticipadamente. 
+          </p>
+
       </div>
     </div>
   </div>
