--- a/soluciones/estructura-metalicas/index.html
+++ b/soluciones/estructura-metalicas/index.html
@@ -119,19 +119,27 @@
               class="responsivo1" 
               alt="Estructuras metálicas una rapida solución">
             </div>
+            <br>
+            <br>
           <h2 style="text-align: center;">CAPACIDADES</h2>
           <P>
-            Diseño y Construcción: Gracias al equipo interdisciplinario al interior de Amviestruc,
+            <h3><Strong>Diseño y Construcción:</Strong></h3> Gracias al equipo interdisciplinario al interior de Amviestruc,
             logramos agrupar el diseño y la construcción como un solo servicio, facilitando la búsqueda
              a nuestros Clientes de soluciones completas.    
           </P>
           <P>
-            Fabricación en Taller y/o Construcción en sitio: Apoyados en nuestros mas de 3000m2 de área 
+            <h3><Strong>Fabricación en Taller y/o Construcción en sitio:</Strong></h3> Apoyados en nuestros mas de 3000m2 de área 
             de producción podemos realizar una prefabricación de los proyectos de nuestros Clientes con 
             su posterior ensamble y armado en sitio. 
           </P>
+          <div>
+            <img src="../../img/sol/estructuras-metalicas-6.jpg"
+            
+            class="responsivo1" 
+            alt="Estructuras metálicas una rapida solución">
+          </div>
           <P>
-            Edificaciones especiales: Nuestra amplia experiencia en el sector, nos ha permitido desarrollar grandes habilidades 
+          <h3><Strong>Edificaciones especiales: </Strong></h3>Nuestra amplia experiencia en el sector, nos ha permitido desarrollar grandes habilidades 
             para la solución de infraestructura no convencional construida en estructura metálica, como muelles, estaciones de bombeo, 
             estructuras complementarias sobre embarcaciones, cárcamos, entre otros…    
           </P>
