--- a/destacados/index.html
+++ b/destacados/index.html
@@ -97,51 +97,51 @@
   <div class="row">
     <div class="col-lg-8 col-md-10 mx-auto">
       <div>
-          <img src="../img/dest/modmovsal.JPG" width="250" style="float: left; padding-bottom: 20px;padding-right: 20px;" alt="..."> 
+          <img src="../img/dest/modmovsal.JPG" width="300" style="float: left; padding-bottom: 20px;padding-right: 20px;" alt="..."> 
           <h5 class="mt-0 mb-1">Módulo móvil de salud</h5>
-            <p> Nuestro <b>módulo móvil de salud</b> aporta soluciones temporales o permanentes a hospitales, centros de salud y centros de atención complementarios, ofreciendo edificaciones transportables, especializadas, de rápida construcción,asépticas y resistentes al uso de productos altamente agresivos sin deteriorar su acabado.<img src="../img/dest/modulo-movil-salud.jpg" width="300" style="float: right; padding-bottom: 0px;padding-right: 0px;padding-top: 20px;;" alt="..."> <b>módulo móvil de salud</b> proporciona respuestas rápidas y eficaces para resolver cualquier déficit de servicio de salud en el lugar deseado con estándares muy altos de <b>confort y limpieza.</b> 
+            <p style="text-align: justify;"> Nuestro <b>módulo móvil de salud</b> aporta soluciones temporales o permanentes a hospitales, centros de salud y centros de atención complementarios, ofreciendo edificaciones transportables, especializadas, de rápida construcción,asépticas y resistentes al uso de productos altamente agresivos sin deteriorar su acabado.<img src="../img/dest/modulo-movil-salud.jpg" width="300" style="float: right; padding-bottom: 0px;padding-right: 0px;padding-top: 20px;padding-left: 20px;" alt="..."> <b>módulo móvil de salud</b> proporciona respuestas rápidas y eficaces para resolver cualquier déficit de servicio de salud en el lugar deseado con estándares muy altos de <b>confort y limpieza.</b> 
             </p> 
       </div>    
         <br><hr><br>
       <div>
-          <img src="../img/dest/casintsoc.jpg" width="300" style="float: right; padding-bottom: 20px;padding-right: 0px;" alt="...">     
+          <img src="../img/dest/casintsoc.jpg" width="300" style="float: right; padding-bottom: 20px;padding-right: 0px;padding-left: 20px;" alt="...">     
             <h5 class="mt-0 mb-1">Casa base</h5>
-              <p> Queremos presentar a nuestros Clientes nuestra <b>casa básica</b> para vivienda rural o urbana, cuya versatilidad permite que sea implementada en proyectos individuales o urbanizados. Nos hemos<img src="../img/dest/casa-lilusa-1.jpg" width="300" style="float: left; padding-right: 20px;padding-bottom: 0px;padding-top: 20px;" alt="..."> preocupado por enlazar el diseño, la economía y el confort para generar áreas amplias que aseguren las necesidades de habitabilidad en un ambiente basado en la sencillez.  
+              <p style="text-align: justify;"> Queremos presentar a nuestros Clientes nuestra <b>casa básica</b> para vivienda rural o urbana, cuya versatilidad permite que sea implementada en proyectos individuales o urbanizados. Nos hemos<img src="../img/dest/casa-lilusa-1.jpg" width="300" style="float: left; padding-right: 20px;padding-bottom: 0px;padding-top: 20px;" alt="..."> preocupado por enlazar el diseño, la economía y el confort para generar áreas amplias que aseguren las necesidades de habitabilidad en un ambiente basado en la sencillez.  
               </p>    
         </div>
         <br><hr><br>
         <div>
-          <img src="../img/dest/camobr.JPG" width="250" style="float: left; padding-bottom: 20px;padding-right: 20px;" alt="..."> 
+          <img src="../img/dest/camobr.JPG" width="300" style="float: left; padding-bottom: 20px;padding-right: 20px;" alt="..."> 
           <h5 class="mt-0 mb-1">Campamentos</h5>
-            <p> Su aplicación en proyectos de minería, petróleos y construcción contribuye a una excelente solución para las edificaciones provisionales que servirán de oficinas, almacenes, alojamientos, entre otros. Su sistema modular se adapta fácilmente a cualquier diseño y sus características termo-acústicas<img src="../img/dest/campamentos-pvc.jpg" width="250" style="float: right; padding-bottom: 0px;padding-right: 0px;padding-top: 20px;;" alt="...">proveen ambientes de mayor confort, lo que se traduce en mayor productividad. Gracias a los materiales de excelente calidad utilizados en la fabricación de nuestro <b>campamento</b>, este puede ser reutilizado un sin número de veces. 
+            <p style="text-align: justify;"> Su aplicación en proyectos de minería, petróleos y construcción contribuye a una excelente solución para las edificaciones provisionales que servirán de oficinas, almacenes, alojamientos, entre otros. Su sistema modular se adapta fácilmente a cualquier diseño y sus características termo-acústicas<img src="../img/dest/campamentos-pvc.jpg" width="250" style="float: right; padding-bottom: 0px;padding-right: 0px;padding-top: 20px;padding-left: 20px;" alt="...">proveen ambientes de mayor confort, lo que se traduce en mayor productividad. Gracias a los materiales de excelente calidad utilizados en la fabricación de nuestro <b>campamento</b>, este puede ser reutilizado un sin número de veces. 
             </p> 
       </div>    
         <br><hr><br>
       <div>
-          <img src="../img/dest/casvig.JPG" width="200" style="float: right; padding-bottom: 20px;padding-right: 0px;" alt="...">     
+          <img src="../img/dest/casvig.JPG" width="270" style="float: right; padding-bottom: 20px;padding-right: 0px;padding-left: 20px;" alt="...">     
             <h5 class="mt-0 mb-1">Caseta de vigilancia</h5>
-              <p>  Pensando en el mejoramiento de las condiciones del personal de seguridad y vigilancia, hemos desarrollado nuestra <b>caseta de vigilancia</b> conservando las formas tradicionales de cubo y ofreciendo los más altos estándares de confort y comodidad que permiten conservar el estado de <img src="../img/dest/caseta-vigilancia-1.jpg" width="300" style="float: left; padding-right: 20px;padding-bottom: 0px;padding-top: 20px;" alt="..."> alerta a la persona que la habita, adicionalmente proporciona gran visibilidad a su alrededor. Nuestra <b>caseta de vigilancia</b> es resistente a los cambios climáticos, fáciles de instalar, transportables y brindan una excelente presentación arquitectónica.  
+              <p style="text-align: justify;">  Pensando en el mejoramiento de las condiciones del personal de seguridad y vigilancia, hemos desarrollado nuestra <b>caseta de vigilancia</b> conservando las formas tradicionales de cubo y ofreciendo los más altos estándares de confort y comodidad que permiten conservar el estado de <img src="../img/dest/caseta-vigilancia-1.jpg" width="300" style="float: left; padding-right: 20px;padding-bottom: 0px;padding-top: 20px;" alt="..."> alerta a la persona que la habita, adicionalmente proporciona gran visibilidad a su alrededor. Nuestra <b>caseta de vigilancia</b> es resistente a los cambios climáticos, fáciles de instalar, transportables y brindan una excelente presentación arquitectónica.  
               </p>    
         </div>
         <br><hr><br>
         <div>
-          <img src="../img/dest/cer.jpg" width="200" style="float: left; padding-bottom: 20px;padding-right: 20px;" alt="..."> 
+          <img src="../img/dest/cer.jpg" width="300" style="float: left; padding-bottom: 20px;padding-right: 20px;" alt="..."> 
           <h5 class="mt-0 mb-1">Cerramientos exterior</h5>
-            <p>Nos hemos preocupado por desarrollar un <b>cerramiento exterior</b> con características arquitectónicas diferenciadoras que permiten su vinculación armónica en cualquier lugar de instalación, proporcionando un<img src="../img/dest/cer1.jpg" width="200" style="float: right; padding-bottom: 0px;padding-right: 0px;padding-top: 20px;;" alt="..."> aspecto agradable gracias a su diseño innovador y diferente. Facilita la seguridad, y privacidad. También es altamente resistente a los agentes climáticos. 
+            <p style="text-align: justify;">Nos hemos preocupado por desarrollar un <b>cerramiento exterior</b> con características arquitectónicas diferenciadoras que permiten su vinculación armónica en cualquier lugar de instalación, proporcionando un<img src="../img/dest/cer1.jpg" width="200" style="float: right; padding-bottom: 0px;padding-right: 0px;padding-top: 20px;padding-left: 20px;" alt="..."> aspecto agradable gracias a su diseño innovador y diferente. Facilita la seguridad, y privacidad. También es altamente resistente a los agentes climáticos. 
             </p> 
       </div>    
         <br><hr><br>
       <div>
-          <img src="../img/dest/cont.jpg" width="200" style="float: right; padding-bottom: 20px;padding-right: 0px;" alt="...">     
+          <img src="../img/dest/cont.jpg" width="300" style="float: right; padding-bottom: 20px;padding-right: 0px;padding-left: 20px;" alt="...">     
             <h5 class="mt-0 mb-1">Bodegas</h5>
-              <p>  Gracias a las características mecánicas y físicas del sistema constructivo RBS podemos crear espacios de grandes luces y de alturas considerables en la construcción de <b>bodegas</b> de almacenamiento, procesos industriales actividad logística e incluso eventos culturales de gran escala.<img src="../img/dest/bod1.JPG" width="250" style="float: left; padding-right: 20px;padding-bottom: 0px;padding-top: 20px;" alt="...">La versatilidad y facilidad de montaje nos permite construir <b>bodegas</b> o naves industriales en la mitad del tiempo que sistemas tradicionales. Además, sus bajos costos de mantenimiento hacen que este tipo de edificaciones sean altamente rentables.  
+              <p style="text-align: justify;">  Gracias a las características mecánicas y físicas del sistema constructivo RBS podemos crear espacios de grandes luces y de alturas considerables en la construcción de <b>bodegas</b> de almacenamiento, procesos industriales actividad logística e incluso eventos culturales de gran escala.<img src="../img/dest/bod1.JPG" width="250" style="float: left; padding-right: 20px;padding-bottom: 0px;padding-top: 20px;" alt="...">La versatilidad y facilidad de montaje nos permite construir <b>bodegas</b> o naves industriales en la mitad del tiempo que sistemas tradicionales. Además, sus bajos costos de mantenimiento hacen que este tipo de edificaciones sean altamente rentables.  
               </p>    
         </div>
         <br><hr><br>
         <div>
           <img src="../img/dest/aul.jpg" width="300" style="float: left; padding-bottom: 20px;padding-right: 20px;" alt="..."> 
           <h5 class="mt-0 mb-1">Aulas de clase</h5>
-            <p>  Llegamos con soluciones constructivas para los proyectos educativos en zonas urbanas, rurales y sobre todo en aquellos lugares de difícil acceso. Nuestras <b>aulas de clase</b> se adaptan a cualquier diseño en cualquier tipo de terreno. Proporcionan un acabado integral listo para usar. En la fabricación y construcción de las aulas damos cumplimiento<img src="../img/dest/colegio-pvc-1.jpg" width="250" style="float: right; padding-bottom: 0px;padding-right: 0px;padding-top: 20px;;" alt="..."> a las normas vigentes para este tipo de edificaciones como lo son su capacidad sismo resistente, niveles de confort, iluminación, entre otros. También resaltamos su capacidad ignifuga y auto extinguible, aséptico y resistente al alto tráfico escolar.
+            <p style="text-align: justify;">  Llegamos con soluciones constructivas para los proyectos educativos en zonas urbanas, rurales y sobre todo en aquellos lugares de difícil acceso. Nuestras <b>aulas de clase</b> se adaptan a cualquier diseño en cualquier tipo de terreno. Proporcionan un acabado integral listo para usar. En la fabricación y construcción de las aulas damos cumplimiento<img src="../img/dest/colegio-pvc-1.jpg" width="250" style="float: right; padding-bottom: 0px;padding-right: 0px;padding-top: 20px;padding-left: 20px;" alt="..."> a las normas vigentes para este tipo de edificaciones como lo son su capacidad sismo resistente, niveles de confort, iluminación, entre otros. También resaltamos su capacidad ignifuga y auto extinguible, aséptico y resistente al alto tráfico escolar.
             </p> 
       </div>    
 
