--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">soluciones</a>
               <div class="dropdown-menu">          
-                <a class="dropdown-item" href="soluciones/estructura-metalicas/index.html">Estructuras Metálicas</a>
+                <a class="dropdown-item" href="soluciones/estructura-metalicas/index.html">Estructurqas Metálicas</a>
                 <a class="dropdown-item" href="soluciones/disenos-estructurales/index.html">Diseño y Consultoria</a>  
                 <a class="dropdown-item" href="soluciones/cubierta-cerramiento/index.html">Cubiertas y Cerramientos</a>
               </div>
