--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
               <a class="nav-link" href="soluciones/index.html">Soluciones</a>
             </li> -->
             <!-- ---------------------------------------------- -->
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class="nav-link" href="soluciones/index.html">Soluciones</a>
-            </li>
+            </li> -->
             <li class="nav-item">
               <a class="nav-link" href="experiencias/index.html">Experiencias</a>
             </li>
