--- a/sectores/farmaceutico/index.html
+++ b/sectores/farmaceutico/index.html
@@ -55,15 +55,26 @@
                   <a class="dropdown-item" href="../plantaciones-ganaderia/">Plantaciones y ganaderia</a>
                 </div>
               </li>
-            <li class="nav-item">
-              <a class="nav-link" href="../../soluciones/index.html">Soluciones</a>
-            </li>
+              <!-- ---------------------------------------------- -->
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">soluciones</a>
+                <div class="dropdown-menu">
+                  <a class="dropdown-item" href="../../soluciones/estructura-metalicas/index.html">Estructuras Metálicas</a>
+                  <a class="dropdown-item" href="../../soluciones/disenos-estructurales/index.html">Diseño y Consultoria</a>  
+                  <a class="dropdown-item" href="../../soluciones/cubierta-cerramiento/index.html">Cubiertas y Cerramientos</a>
+                </div>
+              </li>
+
+              <!-- <li class="nav-item">
+                <a class="nav-link" href="soluciones/index.html">Soluciones</a>
+              </li> -->
+            <!-- ---------------------------------------------- -->
             <li class="nav-item">
               <a class="nav-link" href="../../experiencias/index.html">Experiencias</a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class="nav-link" href="../../noticias/index.html">Noticias</a>
-            </li>
+            </li> -->
             <li class="nav-item">
               <a class="nav-link" href="../../destacados/index.html">Destacados</a>
             </li>
