--- a/soluciones/disenos-estructurales/index.html
+++ b/soluciones/disenos-estructurales/index.html
@@ -72,9 +72,9 @@
             <li class="nav-item">
               <a class="nav-link" href="../../experiencias/index.html">Experiencias</a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class="nav-link" href="../../noticias/index.html">Noticias</a>
-            </li>
+            </li> -->
             <li class="nav-item">
               <a class="nav-link" href="../../destacados/index.html">Destacados</a>
             </li>
