--- a/experiencias/index.html
+++ b/experiencias/index.html
@@ -113,7 +113,7 @@
             <div class="card-body">
               <h5 class="card-title">Cerramiento arquitectónico con vista al Mar Caribe</h5>
               <p class="card-text">“No quiero perder esa hermosa vista al mar…”, fue lo que nos pidió nuestro Cliente, ubicado en el hermoso Corregimiento de Punta Canoa al norte de la histórica...</p>
-              <a href="" class="btn btn-primary">Conoce más</a>
+              <a href="experiencia-2.html" class="btn btn-primary">Conoce más</a>
             </div>
           </div>
           <div class="card" style="width: 20rem; margin-bottom: 40px;">
